# lightlearn

./: .gitignore  README.md  pyproject.toml  setup.py
lightlearn/: __init__.py
lightlearn/src/: activation.py  dense.py  layer.py  mse.py  tanh.py
lightlearn/tests/unit/: test_dense.py
src/: tanh.py
